--- a/Capstone/Views/Location/Create.cshtml
+++ b/Capstone/Views/Location/Create.cshtml
@@ -4,29 +4,35 @@
     ViewBag.Title = "Create Location";
 }
 
-<h2>Create New Location</h2>
+<div class="row bg-black justify-content-center px-1 p-md-5">
+    <h3 class="myText myTitle">Aggiungi Location</h3>
+    <div class="col-10 col-md-6 bg my-2">
+        <form asp-action="Create" method="post" id="createLocationForm">
+            @Html.AntiForgeryToken()
 
-<form asp-action="Create" method="post" id="createLocationForm">
-    @Html.AntiForgeryToken()
+            <div class="form-group">
+                <label asp-for="LocationName" class="control-label text-white">Nome Location</label>
+                <input asp-for="LocationName" id="locationName" class="form-control inputBar" placeholder="Cerca location..." />
+                <span asp-validation-for="LocationName" class="text-danger"></span>
+            </div>
 
-    <div class="form-group">
-        <label asp-for="LocationName" class="control-label"></label>
-        <input asp-for="LocationName" id="locationName" class="form-control" placeholder="Search for location..." />
-        <span asp-validation-for="LocationName" class="text-danger"></span>
+            <div class="form-group mt-2">
+                <label asp-for="AddressGoogleApi" class="control-label text-white">Indirizzo (Google API)</label>
+                <input asp-for="AddressGoogleApi" id="addressGoogleApi" class="form-control inputBar" readonly />
+                <span asp-validation-for="AddressGoogleApi" class="text-danger"></span>
+            </div>
+
+            <!-- Mappa -->
+            <div id="map" style="height: 400px; width: 100%;" class="my-3"></div>
+
+            <div class="form-group mt-3">
+                <button type="submit" class="btn-danger myBtnCart">Salva</button>
+                <a asp-action="List" class="eventBtn">Torna alla lista</a>
+            </div>
+        </form>
     </div>
+</div>
 
-    <div class="form-group">
-        <label asp-for="AddressGoogleApi" class="control-label"></label>
-        <input asp-for="AddressGoogleApi" id="addressGoogleApi" class="form-control" readonly />
-        <span asp-validation-for="AddressGoogleApi" class="text-danger"></span>
-    </div>
-
-    <!-- Add a div for the map -->
-    <div id="map" style="height: 400px; width: 100%;"></div>
-
-    <button type="submit" class="btn btn-primary">Create</button>
-    <a asp-action="List" class="btn btn-secondary">Back to List</a>
-</form>
 
 @section Scripts {
     <script src="~/js/location_create.js"></script>
