--- a/Capstone/Views/Location/Edit.cshtml
+++ b/Capstone/Views/Location/Edit.cshtml
@@ -4,30 +4,37 @@
     ViewBag.Title = "Edit Location";
 }
 
-<h2>Edit Location</h2>
+<div class="row bg-black justify-content-center px-1 p-md-5">
+    <h3 class="myText myTitle">Modifica Location</h3>
+    <div class="col-10 col-md-6 bg my-2">
+        <form asp-action="Edit" method="post">
+            @Html.AntiForgeryToken()
 
-<form asp-action="Edit" method="post">
-    @Html.AntiForgeryToken()
+            <input type="hidden" asp-for="LocationId" />
 
-    <input type="hidden" asp-for="LocationId" />
+            <div class="form-group">
+                <label asp-for="LocationName" class="control-label text-white">Nome Location</label>
+                <input asp-for="LocationName" id="locationName" class="form-control inputBar" data-location-name="@Model.LocationName" placeholder="Cerca location..." />
+                <span asp-validation-for="LocationName" class="text-danger"></span>
+            </div>
 
-    <div class="form-group">
-        <label asp-for="LocationName" class="control-label"></label>
-        <input asp-for="LocationName" id="locationName" class="form-control" placeholder="Search for location..." />
-        <span asp-validation-for="LocationName" class="text-danger"></span>
+            <div class="form-group">
+                <label asp-for="AddressGoogleApi" class="control-label text-white">Indirizzo (Google API)</label>
+                <input asp-for="AddressGoogleApi" id="addressGoogleApi" class="form-control inputBar" data-address-google-api="@Model.AddressGoogleApi" readonly />
+                <span asp-validation-for="AddressGoogleApi" class="text-danger"></span>
+            </div>
+
+            <!-- Mappa -->
+            <div id="map" style="height: 400px; width: 100%;" class="my-3"></div>
+
+            <div class="form-group mt-3">
+                <button type="submit" class="btn-danger myBtnCart">Salva Modifiche</button>
+                <a asp-action="List" class="eventBtn">Torna alla lista</a>
+            </div>
+        </form>
     </div>
+</div>
 
-    <div class="form-group">
-        <label asp-for="AddressGoogleApi" class="control-label"></label>
-        <input asp-for="AddressGoogleApi" id="addressGoogleApi" class="form-control" readonly />
-        <span asp-validation-for="AddressGoogleApi" class="text-danger"></span>
-    </div>
-
-    <div id="map" style="height: 400px; width: 100%;"></div> <!-- Add this to show the map -->
-
-    <button type="submit" class="btn btn-primary">Save Changes</button>
-    <a asp-action="List" class="btn btn-secondary">Back to List</a>
-</form>
 
 @section Scripts {
     <script src="~/js/location_edit.js"></script>
