--- a/Capstone/Views/TicketType/Edit.cshtml
+++ b/Capstone/Views/TicketType/Edit.cshtml
@@ -4,38 +4,35 @@
     ViewData["Title"] = "Edit";
 }
 
-<h1>Edit</h1>
-
-<h4>TicketType</h4>
-<hr />
-<div class="row">
-    <div class="col-md-4">
-        <form asp-action="Edit">
-            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+<div class="row bg-black justify-content-center px-1 p-md-5">
+    <h3 class="myText myTitle">Modifica Tipologia Biglietto</h3>
+    <div class="col-10 col-md-6 bg my-2">
+        <form asp-action="Edit" method="post" id="editTicketTypeForm">
+            @Html.AntiForgeryToken()
             <input type="hidden" asp-for="TicketTypeId" />
+
             <div class="form-group">
-                <label asp-for="TicketTypeName" class="control-label"></label>
-                <input asp-for="TicketTypeName" class="form-control" />
+                <label asp-for="TicketTypeName" class="control-label text-white">Nome Tipologia</label>
+                <input asp-for="TicketTypeName" class="form-control inputBar" />
                 <span asp-validation-for="TicketTypeName" class="text-danger"></span>
             </div>
-            <div class="form-group">
-                <label asp-for="TicketTypeDescription" class="control-label"></label>
-                <input asp-for="TicketTypeDescription" class="form-control" />
+
+            <div class="form-group mt-2">
+                <label asp-for="TicketTypeDescription" class="control-label text-white">Descrizione</label>
+                <input asp-for="TicketTypeDescription" class="form-control inputBar" />
                 <span asp-validation-for="TicketTypeDescription" class="text-danger"></span>
             </div>
-            <div class="form-group">
-                <label asp-for="Price" class="control-label"></label>
-                <input asp-for="Price" class="form-control" />
+
+            <div class="form-group mt-2">
+                <label asp-for="Price" class="control-label text-white">Prezzo</label>
+                <input asp-for="Price" class="form-control inputBar" />
                 <span asp-validation-for="Price" class="text-danger"></span>
             </div>
-            <div class="form-group">
-                <input type="submit" value="Save" class="btn btn-primary" />
+
+            <div class="form-group mt-3">
+                <button type="submit" class="btn-danger myBtnCart">Salva</button>
+                <a asp-action="List" class="eventBtn">Torna alla lista</a>
             </div>
         </form>
     </div>
 </div>
-
-<div>
-    <a asp-action="List">Back to List</a>
-</div>
-
